  - The -g command line option releases the GIL whenever a call is made to the
    wrapped library.
  - Added the /HoldGIL/ annotation to explicitly retail the GIL when calling a
    particular function in the wrapped library.
  - Added sipFindClass() and sipFindNamedEnum() to the public API.
  - /TransferThis/ may be specified more than once.
  - Added support for __truediv__ and __itruediv__.

v4.5.2 9th December 2006
  - A bug fix release.

v4.5.1 9th December 2006
  - Added the SIP_SSIZE_T type to help write PEP 353 compliant handwritten
    code.

v4.5 4th November 2006
  - Added support for Python v2.5.
  - Added sip_config_args to sipconfig.py.
  - sip.voidptr now implements __hex__().
  - Added sip.delete() to call a C++ instance's destructor, or return a C
    structure to the heap.
  - Added sip.isdeleted() to check if a C++ instance or C structure has been
    destroyed or returned to the heap.
  - Added sip.setdeleted() to mark that a C++ instance or C structure has been
    destroyed or returned to the heap.
  - Added support for pure virtual destructors.
  - Added the __dtor__() method to allow Python code to be called from a C++
    destructor.
  - Added the /NoDefaultCtors/ class annotation.
  - The generated API files are now more complete and use Python types rather
    than C/C++ types.
  - Added support for embedding manifests for MSVC 2005.

v4.4.5 10th June 2006
  - A bug fix release.

v4.4.4 8th June 2006
  - Added %ExportedHeaderCode and %UnitCode.
  - Added sipExportSymbol() and sipImportSymbol() to the public API.

v4.4.3 27th April 2006
  - A bug fix release.

v4.4.2 23rd April 2006
  - A bug fix release.

v4.4.1 3rd April 2006
  - A bug fix release.

v4.4 24th March 2006
  - The major number of the internal API has changed so it will be necessary
    to regenerate all modules.
  - This release introduces small incompatibilities that may affect handwritten
    code.  See the documentation for the details.